AMP-17540 Activity Form: alignment issue on activity form
git-svn-id: file:///svn/branches/AMP_2_8_RELEASE@24436 9e8d75aa-d0cb-44a9-8341-a4b8ba1a38b4

--- a/amp/TEMPLATE/ampTemplate/css_2/amp-wicket.css
+++ b/amp/TEMPLATE/ampTemplate/css_2/amp-wicket.css
@@ -444,6 +444,8 @@ div.trnpanel div.trn-row a:hover {
 .feedbackPanelERROR{color: red;}
 .feedbackPanelINFO{color: green;}
 .wicketFloatLeft{float: left;}
+.wicketComponentsDeleteButton{position: absolute;margin-top: 20px;margin-left:-25px;}
+.wicketAlignTop{vertical-align: top;}
 .wicketFloatRight{float: right;}
 .wicketPaddingRight10{padding-right: 10px;}
 .wicketPadding2{padding: 2px;}
